packages/parser/test/parser/E0157.txt
loop i := 0; i < 10 i++ {}
===== err =====
anonymous:1:20: ParseError: E0157 - Expected semicolon after loop statement condition
1 | loop i := 0; i < 10 i++ {}
  |                    ^
